[package]
name = "procure"
version = "0.1.1"
authors = ["Gary M. Josack <gary@byoteki.com>"]
repository = "https://github.com/getprocure/procure"
documentation = "http://getprocure.github.io/procure"
license = "Apache-2.0"
description = "Rust Library for interfacing with /proc"

[dependencies]
sysconf = "*"
